--- a/Tests/PointFreeTests/__Snapshots__/MinimalNavViewTests/testNav_Html.dark_logged-in_inactive-subscriber.html
+++ b/Tests/PointFreeTests/__Snapshots__/MinimalNavViewTests/testNav_Html.dark_logged-in_inactive-subscriber.html
@@ -53,6 +53,13 @@
           </li>
           <li class="m-pl3
                      inline">
+            <a href="/pricing"
+               class="pf-link-green">
+              Subscribe
+            </a>
+          </li>
+          <li class="m-pl3
+                     inline">
             <a href="/account"
                class="pf-link-green">
               Account
