--- a/Tests/PointFreeTests/EmailTests/__Snapshots__/WelcomeEmailTests/testWelcomeEmail1.1.html
+++ b/Tests/PointFreeTests/EmailTests/__Snapshots__/WelcomeEmailTests/testWelcomeEmail1.1.html
@@ -106,6 +106,11 @@ episode, and click the “Use an episode credit” button!</p>
 <li><a href="https://www.pointfree.co/episodes/ep4-algebraic-data-types">Algebraic Data Type: Part 1</a></li>
 <li><a href="https://www.pointfree.co/episodes/ep12-tagged">Tagged</a></li>
 <li><a href="https://www.pointfree.co/episodes/ep14-contravariance">Contravariance</a></li>
+<li><a href="https://www.pointfree.co/episodes/ep33-protocol-witnesses-part-1">Protocol Witnesses: Part 1</a></li>
+<li><a href="https://www.pointfree.co/episodes/ep39-witness-oriented-library-design">Witness-Oriented Library Design</a></li>
+<li><a href="https://www.pointfree.co/episodes/ep56-what-is-a-parser-part-1">What Is a Parser?: Part 1</a></li>
+<li><a href="https://www.pointfree.co/episodes/ep65-swiftui-and-state-management-part-1">SwiftUI and State Management: Part 1</a></li>
+<li><a href="https://www.pointfree.co/episodes/ep68-composable-state-management-reducers">Composable State Management: Reducers</a></li>
 </ul>
 
                   </div>
