--- a/Tests/PointFreeTests/EmailTests/__Snapshots__/InviteEmailTests/testInviteAcceptance.1.html
+++ b/Tests/PointFreeTests/EmailTests/__Snapshots__/InviteEmailTests/testInviteAcceptance.1.html
@@ -79,8 +79,8 @@
                            bold
                            ts-d-r2
                            ts-m-r1_5
-                           lh-2"
-                    class="m-pb2"
+                           lh-2
+                           m-pb2"
                     style="margin-top:0.5rem;
                            margin-bottom:0.5rem;
                            margin-right:0;
@@ -88,7 +88,8 @@
                            color:#121212;
                            font-weight:700;
                            font-size:1.5rem;
-                           line-height:1.45">
+                           line-height:1.45;
+                           padding-bottom:1rem">
                   Your invitation was accepted!
                 </h3>
                 <p style="margin-top:0.5rem;
