--- a/Tests/PointFreeTests/EmailTests/__Snapshots__/TeamEmailsTests/testTeammateRemovedEmailView.1.html
+++ b/Tests/PointFreeTests/EmailTests/__Snapshots__/TeamEmailsTests/testTeammateRemovedEmailView.1.html
@@ -106,7 +106,9 @@
                             margin-left:0;
                             padding-top:1rem;
                             padding-bottom:1rem">
-                    You have removed Blob from your Point-Free team, which means they no longer
+                    You have removed 
+                    Blob
+                     from your Point-Free team, which means they no longer
 have access to full episodes and transcripts. You can add them back anytime from your account
 settings.
                   </p>
