--- a/Tests/PointFreeTests/EmailTests/__Snapshots__/TeamEmailsTests/testYouHaveBeenRemovedEmailView.1.html
+++ b/Tests/PointFreeTests/EmailTests/__Snapshots__/TeamEmailsTests/testYouHaveBeenRemovedEmailView.1.html
@@ -106,7 +106,9 @@
                             margin-left:0;
                             padding-top:1rem;
                             padding-bottom:1rem">
-                    You have been removed from Blob’s Point-Free team, which means you no longer
+                    You have been removed from 
+                    Blob
+                    ’s Point-Free team, which means you no longer
 have access to full episodes and transcripts. If you wish to subscribe to an individual plan,
 click the link below!
                   </p>
