Process new episode email blurb Markdown

--- a/Tests/PointFreeTests/EmailTests/__Snapshots__/NewEpisodeEmailTests/testNewEpisodeEmail_Markdown.1.html
+++ b/Tests/PointFreeTests/EmailTests/__Snapshots__/NewEpisodeEmailTests/testNewEpisodeEmail_Markdown.1.html
@@ -37,8 +37,7 @@
                  max-height:0;
                  max-width:0;
                  overflow:hidden">
-      This is a short blurb to give a high-level overview of what the episode is about. It can only be plain
-text, no markdown allowed. Here is some more text just to have some filler.
+      Crafting better test dependencies for our code bases come with additional benefits outside of testing. We show how SwiftUI previews can be strengthened from better dependencies, and we show how we employ these techniques in our newly released game, [isowords](https://www.isowords.xyz).
     </span>
     <table border="0"
            cellpadding="0"
@@ -89,6 +88,47 @@ text, no markdown allowed. Here is some more text just to have some filler.
                             padding-right:0;
                             padding-top:0;
                             padding-bottom:0">
+                  <blockquote class="m-pl2
+                                     m-pr2
+                                     m-pt2
+                                     m-pb2
+                                     m-ml0
+                                     m-mr0
+                                     m-mt3
+                                     m-mb3
+                                     bg-blue900
+                                     italic"
+                              style="padding-left:1rem;
+                                     padding-right:1rem;
+                                     padding-top:1rem;
+                                     padding-bottom:1rem;
+                                     margin-left:0;
+                                     margin-right:0;
+                                     margin-top:2rem;
+                                     margin-bottom:2rem;
+                                     background-color:#e6f8ff;
+                                     font-style:italic">
+                    <h5 class="fg-black
+                               bold
+                               ts-d-r1_25
+                               ts-m-r1
+                               lh-1"
+                        style="margin-top:0.5rem;
+                               margin-bottom:0.5rem;
+                               margin-right:0;
+                               margin-left:0;
+                               color:#121212;
+                               font-weight:700;
+                               font-size:1rem;
+                               line-height:1.25">
+                      Announcements
+                    </h5>
+                    <div class="md-ctn"
+                         style="">
+                      <p>This is an announcement for subscribers.</p>
+
+                    </div>
+                  </blockquote>
                   <a href="http://localhost:8080/episodes/ep2-proof-in-functions"
                      style="color:#121212;
                             text-decoration:none;
@@ -111,8 +151,7 @@ text, no markdown allowed. Here is some more text just to have some filler.
                   </a>
                   <div class="md-ctn"
                        style="">
-                    <p>This is a short blurb to give a high-level overview of what the episode is about. It can only be plain
-text, no markdown allowed. Here is some more text just to have some filler.</p>
+                    <p>Crafting better test dependencies for our code bases come with additional benefits outside of testing. We show how SwiftUI previews can be strengthened from better dependencies, and we show how we employ these techniques in our newly released game, <a href="https://www.isowords.xyz">isowords</a>.</p>
 
                   </div>
                   <p class="m-pt2
@@ -136,7 +175,7 @@ text, no markdown allowed. Here is some more text just to have some filler.</p>
                             margin-bottom:0.5rem;
                             margin-right:0;
                             margin-left:0">
-                    This episode is free for everyone, made possible by our subscribers. Consider becoming a subscriber today!
+                    This episode is 23 minutes long.
                   </p>
                   <p class="m-pt2
                             m-pb2"
@@ -146,7 +185,7 @@ text, no markdown allowed. Here is some more text just to have some filler.</p>
                             margin-left:0;
                             padding-top:1rem;
                             padding-bottom:1rem">
-                    <a href="http://localhost:8080/pricing"
+                    <a href="http://localhost:8080/episodes/ep2-proof-in-functions"
                        class="medium
                               cursor-pointer
                               nowrap
@@ -181,45 +220,7 @@ text, no markdown allowed. Here is some more text just to have some filler.</p>
                               font-size:1rem;
                               padding-left:1rem;
                               padding-right:1rem">
-                      Subscribe to Point-Free!
-                    </a>
-                    <a href="http://localhost:8080/episodes/ep2-proof-in-functions"
-                       class="medium
-                              cursor-pointer
-                              nowrap
-                              btn-outline
-                              border-none
-                              underline
-                              pf-link-black
-                              fg-black
-                              bg-inherit
-                              h5
-                              m-pl2
-                              m-pr2
-                              inline-block"
-                       style="color:#121212;
-                              text-decoration:none;
-                              border-bottom:1px solid black;
-                              font-weight:500;
-                              cursor:pointer;
-                              white-space:nowrap;
-                              text-decoration:underline !important;
-                              border-top-style:none;
-                              border-right-style:none;
-                              border-bottom-style:none;
-                              border-left-style:none;
-                              border-top-width:0;
-                              border-right-width:0;
-                              border-bottom-width:0;
-                              border-left-width:0;
-                              text-decoration:underline;
-                              color:#121212;
-                              background-color:inherit;
-                              font-size:1rem;
-                              padding-left:1rem;
-                              padding-right:1rem;
-                              display:inline-block">
-                      Watch
+                      Watch now!
                     </a>
                   </p>
                   <p class="m-pt2"
