--- a/Tests/PointFreeTests/EmailTests/__Snapshots__/NewEpisodeEmailTests/testNewEpisodeEmail_Subscriber.1.html
+++ b/Tests/PointFreeTests/EmailTests/__Snapshots__/NewEpisodeEmailTests/testNewEpisodeEmail_Subscriber.1.html
@@ -109,13 +109,12 @@ text, no markdown allowed. Here is some more text just to have some filler.
                       #2: Proof in Functions
                     </h3>
                   </a>
-                  <p style="margin-top:0.5rem;
-                            margin-bottom:0.5rem;
-                            margin-right:0;
-                            margin-left:0">
-                    This is a short blurb to give a high-level overview of what the episode is about. It can only be plain
-text, no markdown allowed. Here is some more text just to have some filler.
-                  </p>
+                  <div class="md-ctn"
+                       style="">
+                    <p>This is a short blurb to give a high-level overview of what the episode is about. It can only be plain
+text, no markdown allowed. Here is some more text just to have some filler.</p>
+
+                  </div>
                   <p class="m-pt2
                             m-pb2"
                      style="margin-top:0.5rem;
