--- a/Tests/PointFreeTests/EmailTests/__Snapshots__/WelcomeEmailTests/testWelcomeEmail1.1.html
+++ b/Tests/PointFreeTests/EmailTests/__Snapshots__/WelcomeEmailTests/testWelcomeEmail1.1.html
@@ -97,7 +97,7 @@ you have any questions. Just reply to this email!</p>
                   </div>
                   <div class="md-ctn"
                        style="">
-                    <p>In the meantime, it looks like you have a <strong>free episode credit</strong>! You can use this to see <em>any</em>
+                    <p>In the meantime, it looks like you have a <strong>free episode credit</strong>! You can use this to see *any*
 subscriber-only episode, completely for free! Just visit <a href="http://localhost:8080">our site</a>, go to an
 episode, and click the “Use an episode credit” button!</p>
 <p>Here are some of the top episodes that viewers have chosen to use their credits on:</p>
@@ -116,7 +116,7 @@ episode, and click the “Use an episode credit” button!</p>
                   </div>
                   <div class="md-ctn"
                        style="">
-                    <p>When you’re ready to subscribe for yourself <em>or</em> your team, visit
+                    <p>When you’re ready to subscribe for yourself _or_ your team, visit
 <a href="http://localhost:8080/pricing">our subscribe page</a>!</p>
 
                   </div>
