--- a/Tests/PointFreeTests/EmailTests/__Snapshots__/WelcomeEmailTests/testWelcomeEmail2.1.html
+++ b/Tests/PointFreeTests/EmailTests/__Snapshots__/WelcomeEmailTests/testWelcomeEmail2.1.html
@@ -99,14 +99,14 @@ of free episodes for you to check out!</p>
                   </div>
                   <div class="md-ctn"
                        style="">
-                    <p>You <em>also</em> have a <strong>free episode credit</strong> you can use to see <em>any</em> <em>subscriber-only</em> episode,
+                    <p>You <em>also</em> have a <strong>free episode credit</strong> you can use to see <em>any</em> _subscriber-only_ episode,
 completely for free! Just visit <a href="http://localhost:8080">our site</a>, go to an episode, and click the “Use an episode credit” button.</p>
 
                   </div>
                   <div class="md-ctn"
                        style="">
                     <p>If you have any questions, don’t hesitate to reply to this email!</p>
-<p>When you’re ready to subscribe for yourself <em>or</em> your team, visit
+<p>When you’re ready to subscribe for yourself _or_ your team, visit
 <a href="http://localhost:8080/pricing">our subscribe page</a>!</p>
 
                   </div>
