--- a/Tests/PointFreeTests/EmailTests/__Snapshots__/WelcomeEmailTests/testWelcomeEmail2.1.html
+++ b/Tests/PointFreeTests/EmailTests/__Snapshots__/WelcomeEmailTests/testWelcomeEmail2.1.html
@@ -89,7 +89,7 @@
                   <div class="md-ctn"
                        style="">
                     <p>👋 Hey there!</p>
-<p>You signed up for a <a href="http://localhost:8080">Point-Free</a> account a couple weeks ago but still haven’t subscribed!</p>
+<p>You signed up for a <a href="http://localhost:8080/">Point-Free</a> account a couple weeks ago but still haven’t subscribed!</p>
 <p>If you’re still on the fence and want to see a little more of what we have to offer, we have a number
 of free episodes for you to check out!</p>
 <ul>
@@ -100,7 +100,7 @@ of free episodes for you to check out!</p>
                   <div class="md-ctn"
                        style="">
                     <p>You <em>also</em> have a <strong>free episode credit</strong> you can use to see <em>any</em> <em>subscriber-only</em> episode,
-completely for free! Just visit <a href="http://localhost:8080">our site</a>, go to an episode, and click the “Use an episode credit” button.</p>
+completely for free! Just visit <a href="http://localhost:8080/">our site</a>, go to an episode, and click the “Use an episode credit” button.</p>
 
                   </div>
                   <div class="md-ctn"
