update date formatters

--- a/Tests/PointFreeTests/AccountTests/__Snapshots__/CancelTests/testCancelEmail.1.html
+++ b/Tests/PointFreeTests/AccountTests/__Snapshots__/CancelTests/testCancelEmail.1.html
@@ -38,7 +38,7 @@
                  max-width:0;
                  overflow:hidden">
       Your Individual Monthly subscription has been canceled and will remain active through
-3/2/18.
+Mar 2, 2018.
     </span>
     <table border="0"
            cellpadding="0"
@@ -115,7 +115,7 @@
                       Individual Monthly
                     </strong>
                      subscription has been canceled and will remain active through 
-                    3/2/18
+                    Mar 2, 2018
                     . If you change your mind before then, you can reactivate from 
                     <a href="http://localhost:8080/account"
                        style="color:#121212;
