--- a/Tests/PointFreeTests/AccountTests/__Snapshots__/CancelTests/testReactivateEmail.1.html
+++ b/Tests/PointFreeTests/AccountTests/__Snapshots__/CancelTests/testReactivateEmail.1.html
@@ -37,7 +37,7 @@
                  max-height:0;
                  max-width:0;
                  overflow:hidden">
-      Your Individual Monthly subscription has been reactivated and will renew on 3/2/18.
+      Your Individual Monthly subscription has been reactivated and will renew on Mar 2, 2018.
     </span>
     <table border="0"
            cellpadding="0"
@@ -114,7 +114,7 @@
                       Individual Monthly
                     </strong>
                      subscription has been reactivated and will renew on 
-                    3/2/18
+                    Mar 2, 2018
                     .
                   </p>
                 </div>
