--- a/Tests/PointFreeTests/__Snapshots__/MinimalNavViewTests/testNav_Html.light_logged-out.html
+++ b/Tests/PointFreeTests/__Snapshots__/MinimalNavViewTests/testNav_Html.light_logged-out.html
@@ -79,7 +79,7 @@
               </li>
               <li class="m-pl2
                          inline">
-                <a href="/login"
+                <a href="/login?redirect=http://localhost:8080/"
                    class="medium
                           cursor-pointer
                           nowrap
